# transformer-classifier

./: .gitignore  README.md  inference.py  inference_raw.py  pyproject.toml  requirements.txt  simple_transformer_classifier.py  source_data.py  train.py  train_raw.py
src/classifier/common/: source_data.py
src/transform_classifier/pretrained/: inference.py  train.py
src/transform_classifier/raw/: inference.py  train.py
