[project]
name = "transformer-classifier"
version = "0.1.0"
description = "Easy to use classifier"
authors = [
  { name="Daniel Chang" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

